--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script
+    src='https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyBDOgmj_PGo_V6cxm3xqTzXbFLBla-b8Oc'></script>
   <title>React App</title>
 </head>
 
